[gd_scene load_steps=16 format=3 uid="uid://dhq3j05ofi0lb"]

[ext_resource type="Script" path="res://Scripts/pre_exercise_one_screen.gd" id="1_igkpn"]
[ext_resource type="FontFile" uid="uid://bslnk4jwc4au1" path="res://Fonts/DMSans_24pt-Regular.ttf" id="2_so2u2"]
[ext_resource type="FontFile" uid="uid://dynbc330hutk" path="res://Fonts/DMSans_24pt-Medium.ttf" id="5_ogckx"]
[ext_resource type="Texture2D" uid="uid://bicymrmg256x1" path="res://Icons/user.svg" id="6_2mtaq"]
[ext_resource type="Texture2D" uid="uid://c4j0354y3ycey" path="res://Icons/help-circle.svg" id="7_80feb"]
[ext_resource type="Texture2D" uid="uid://bwqcb6ijs7s4q" path="res://Artwork/starGrey.png" id="7_lak4t"]
[ext_resource type="Texture2D" uid="uid://luawu3g403j4" path="res://Icons/home.svg" id="9_6kevv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guinx"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crrfk"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5114w"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ionqs"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4skss"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i46g6"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2vqy"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jcuu"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[node name="Exercise 1 Settings" type="Node2D"]
script = ExtResource("1_igkpn")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0.631373, 0.823529, 0.945098, 1)

[node name="cancel" type="Button" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 189.0
offset_top = 450.0
offset_right = 489.0
offset_bottom = 542.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so2u2")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_guinx")
theme_override_styles/hover = SubResource("StyleBoxFlat_crrfk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5114w")
text = "cancel"

[node name="start" type="Button" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 536.0
offset_top = 450.0
offset_right = 836.0
offset_bottom = 542.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so2u2")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ionqs")
theme_override_styles/hover = SubResource("StyleBoxFlat_crrfk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5114w")
text = "start"

[node name="descriptionText" type="Button" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 512.0
offset_top = 124.0
offset_right = 917.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_ionqs")
theme_override_styles/hover = SubResource("StyleBoxFlat_crrfk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5114w")
text = "practice different
sets of sounds
by word list"
flat = true

[node name="WordListDropdown" type="OptionButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 189.0
offset_top = 129.0
offset_right = 489.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_4skss")
theme_override_styles/normal = SubResource("StyleBoxFlat_i46g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2vqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0jcuu")
button_pressed = true
item_count = 4
selected = 0
allow_reselect = true
popup/item_0/text = "Word List"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "M vs N"
popup/item_1/id = 1
popup/item_2/text = "S vs F"
popup/item_2/id = 2
popup/item_3/text = "T vs P"
popup/item_3/id = 3

[node name="TTSDropdown" type="OptionButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 189.0
offset_top = 229.0
offset_right = 489.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_4skss")
theme_override_styles/normal = SubResource("StyleBoxFlat_i46g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2vqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0jcuu")
button_pressed = true
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "Text to Speech Voice"
popup/item_0/id = 0
popup/item_0/disabled = true

[node name="BGNoiseDropdown" type="OptionButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 189.0
offset_top = 332.0
offset_right = 489.0
offset_bottom = 392.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_4skss")
theme_override_styles/normal = SubResource("StyleBoxFlat_i46g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2vqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0jcuu")
button_pressed = true
item_count = 5
selected = 0
allow_reselect = true
popup/item_0/text = "Background Noise"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "None"
popup/item_1/id = 4
popup/item_2/text = "Announcer"
popup/item_2/id = 1
popup/item_3/text = "Bus Interior"
popup/item_3/id = 2
popup/item_4/text = "Food Court"
popup/item_4/id = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ColorRect"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 924.0
offset_right = 1024.0
offset_bottom = 576.0
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 30
alignment = 1

[node name="Profile" type="Button" parent="Background/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("6_2mtaq")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Home" type="Button" parent="Background/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("9_6kevv")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Help" type="Button" parent="Background/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("7_80feb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BGLow" type="TextureButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 529.0
offset_top = 339.0
offset_right = 779.0
offset_bottom = 549.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("7_lak4t")

[node name="BGMedium" type="TextureButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 611.0
offset_top = 339.0
offset_right = 861.0
offset_bottom = 549.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("7_lak4t")

[node name="BGHigh" type="TextureButton" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 689.0
offset_top = 339.0
offset_right = 939.0
offset_bottom = 549.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("7_lak4t")

[node name="UI" type="Node2D" parent="."]

[node name="AppTitle" type="Label" parent="UI"]
offset_top = 27.0
offset_right = 1024.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 60
text = "exercise 1 settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AppTitle2" type="Label" parent="UI/AppTitle"]
layout_mode = 0
offset_left = 523.0
offset_top = 361.0
offset_right = 764.0
offset_bottom = 399.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ogckx")
theme_override_font_sizes/font_size = 22
text = "Low   Medium   High"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="Node2D" parent="."]

[node name="Globals" type="Node2D" parent="."]

[connection signal="pressed" from="Background/ColorRect/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Background/ColorRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Background/ColorRect/descriptionText" to="." method="_on_description_text_pressed"]
[connection signal="item_selected" from="Background/ColorRect/WordListDropdown" to="." method="wordListDropdownItemSelected"]
[connection signal="item_selected" from="Background/ColorRect/TTSDropdown" to="." method="TTSDropdownItemSelected"]
[connection signal="item_selected" from="Background/ColorRect/BGNoiseDropdown" to="." method="BGNoiseDropdownItemSelected"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Background/ColorRect/BGLow" to="." method="BGLowPressed"]
[connection signal="pressed" from="Background/ColorRect/BGMedium" to="." method="BGMediumPressed"]
[connection signal="pressed" from="Background/ColorRect/BGHigh" to="." method="BGHighPressed"]
